# benchbot_robot_controller

./: .gitignore  CMakeLists.txt  README.md  init_network  package.xml  requirements.txt  setup.py
nodes/: benchbot_robot_controller  debug_move_to_pose  noisify_odom  noisify_pose
scripts/: create_env  create_env_map  pull_config  real_robot_controller
src/: benchbot_robot_controller.py  benchbot_spatial.py  robot_callbacks.py
