<?xml version="1.0"?>
<package format="2">
  <name>benchbot_robot_controller</name>
  <version>2.4.0</version>
  <description>The benchbot_robot_controller package</description>

  <maintainer email="b.talbot@qut.edu.au">Ben Talbot</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>ros_numpy</exec_depend>

  <export></export>
</package>
